# mystuff-py

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  item.txt  pyproject.toml  requirements.txt
app/: main.py
app/ai/accent/: learner.py  mappings.py
app/ai/lyrics/: cleaner.py  processor.py
app/ai/nlp/: accuracy.py  text_utils.py
app/api/routes/: auth.py  collections.py  files.py  health.py  logs.py  media.py  notes.py  notifications.py  users.py
app/api/websocket/: dictate.py  lyrics.py  notifications.py  telemetry.py
app/core/: config.py  constants.py  errors.py  lifespan.py  logger.py  security.py
app/database/: base.py  session.py
app/database/migrations/: env.py
app/database/migrations/versions/: 2026_06_04_5f0698bd8a0c_fix_utc_default.py  2026_07_15_6fcfec8263f6_initial_migration.py  2026_07_15_9ac9d0a88b4f_expand_notification_types.py  2026_07_16_fdf2a45e8250_add_archived_to_notifications.py  2026_07_18_193d2f5ccab2_add_collections.py
app/models/: __init__.py  auth.py  base.py  collection.py  common.py  enums.py  file.py  folder.py  media.py  note.py  notification.py  system_log.py  user.py
app/repositories/: __init__.py  auth_repository.py  base_repository.py  collection_repository.py  file_repository.py  folder_repository.py  log_repository.py  media_repository.py  note_repository.py  notification_repository.py  user_repository.py
app/schemas/: __init__.py  auth.py  collection.py  common.py  file.py  folder.py  media.py  note.py  notification.py  storage.py  system_log.py  token.py  user.py
app/services/: auth_service.py  collection_service.py  email_service.py  file_service.py  folder_service.py  log_service.py  media_service.py  note_service.py  notification_service.py  storage_provider.py  storage_service.py  transcription_service.py  user_service.py
